e2e/agic/multinamespace/output/httproute-default-ingress-1-contoso-com.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-1-contoso-com
  namespace: default
spec:
  hostnames:
  - contoso.com
  parentRefs:
  - name: alb-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: contoso-1-service
      port: 80
    matches:
    - path:
        type: Exact
        value: /
