e2e/agic/multinamespace/output/httproute-second-namespace-ingress-2-contoso-com.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-2-contoso-com
  namespace: second-namespace
spec:
  hostnames:
  - contoso.com
  parentRefs:
  - name: alb-gateway
    namespace: default
    sectionName: http
  rules:
  - backendRefs:
    - name: contoso-2-service
      port: 80
    matches:
    - path:
        type: Exact
        value: /
